objects/Account.object
<CustomObject>
    <fields>
        <fullName>boeingrollbackfield__c</fullName>
        <label>boeingrollbackfield</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chandanadev1field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>chandanadev1field</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chandanadev2field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>chandanadev2field</label>
        <length>27</length>
        <type>Text</type>
    </fields>
</CustomObject>